Archive2/fe/1b41ed214481f0/output
main.cpp:7:23: error: call to non-constexpr function '_Tp* std::addressof(_Tp&) [with _Tp = const int]'
 test<(std::addressof(x) - std::addressof(x))> foo;
                       ^
main.cpp:7:23: error: call to non-constexpr function '_Tp* std::addressof(_Tp&) [with _Tp = const int]'
main.cpp:7:45: note: in template argument for type 'int' 
 test<(std::addressof(x) - std::addressof(x))> foo;
                                             ^
main.cpp:7:50: error: invalid type in declaration before ';' token
 test<(std::addressof(x) - std::addressof(x))> foo;
                                                  ^
