Archive2/fe/1b41ed214481f0/main.cpp
#include <iostream>

constexpr int x = 0;

template <int...> struct test {};

test<(std::addressof(x) - std::addressof(x))> foo;

int main() {}